# libgguf

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  _libgguf_module.cpp  imatrix.py  libgguf.cpp  libgguf.h  pyproject.toml  quantize.py  setup.py
.github/workflows/: ci.yml
bench/: backend_bench.cpp  check_exact.py  conversion_bench.py  cuda_quant_bench.py  torch_bench.py
bench/results/: README.md  cuda_dequant_current_20260506.csv  cuda_quant_current_all.csv  cuda_quant_current_iq_tables_all.csv  dequant_packed_byte_final.csv  fp4_dequant_packed_byte.csv  fp4_warp_quant_production.csv  fp4_warp_quant_production.json  iq1_grid_lookup_quant.csv  iq1_iq2_neighbour_tables_quant.csv  iq2_fused_grid_or_neighbour_quant.csv  iq2_grid_lookup_quant.csv  iq2_neighbour_table_all_quant.csv  iq2_packed_grid_decode_quant.csv  iq2_xs_fused_threads32_quant.csv  iq2s_neighbour_table_final_quant.csv  iq3_grid_lookup_quant.csv  iq3_neighbour_table_quant.csv  iq3_packed_grid_decode_quant.csv  iq_fused_grid_or_neighbour_final_quant.csv  iq_fused_grid_or_neighbour_quant.csv  iq_tables_threads128_quant.csv  iq_tables_threads64_quant.csv  iq_tables_tuned_threads_confirm_quant.csv  iq_tables_tuned_threads_quant.csv  k_quant_investigation.csv  k_quant_investigation.json  k_quant_investigation.md  q1_dequant_packed_byte.csv  q1_dequant_pair_adjacent.csv  q1_dequant_pair_adjacent_final.csv  q1_dequant_quad_adjacent.csv  q2_k_lane_subgroups_production.csv  q2_k_lane_subgroups_production.json  q3_k_lane_subgroups_production.csv  q3_k_lane_subgroups_production.json  q4_k_lane_subgroups_production.csv  q4_k_lane_subgroups_production.json  q5_k_lane_subgroups_production.csv  q5_k_lane_subgroups_production.json  (+6 more)
bench/results/cuda_cpu_quant_dequant_20260506T160633Z/: results.csv  results.json  summary.md
bench/results/cuda_q3_k_warp_quant_20260506T180100Z/: results.csv  results.json  summary.md
bench/results/cuda_q_warp_quant_20260506T172008Z/: results.csv  results.json  summary.md
bench/results/flux1_dev_cpu_qtypes_20260507T1745Z/: aggregate.csv  aggregate.json
bench/results/flux1_dev_cpu_vs_cuda_qtypes_20260507T1745Z/: aggregate.csv  aggregate.json  summary.md
bench/results/flux1_dev_cuda_q4km_pipeline0_20260507T205848Z/: summary.csv  summary.json
bench/results/flux1_dev_cuda_q4km_pipeline1_20260507T205848Z/: summary.csv  summary.json
csrc/: _libgguf_module.cpp  libgguf.cpp  quantize_gguf.cpp  quantize_gguf_f16c.cpp
csrc/common/: libgguf_backend.h  libgguf_common.cpp  libgguf_common.h  libgguf_common_quant.cpp  libgguf_common_quant_avx2.cpp  libgguf_common_quant_sse2.cpp  libgguf_common_quant_sse4_1.cpp  libgguf_cpu.cpp  libgguf_cpu.h  libgguf_internal.h  libgguf_iq_tables.cpp  libgguf_iq_tables.h  libgguf_storage.cpp  libgguf_storage.h  libgguf_storage_sse2.cpp  libgguf_tables.cpp  libgguf_tables.h  libgguf_validate.cpp
csrc/dequant/: dequant.cpp  dequant_backend_fallback.h  dequant_generic.cpp
csrc/quant/: dequant.cpp  dequant_backend_fallback.h  dequant_generic.cpp  dequant_iq1_m_sse4_1.cpp  dequant_iq1_s_avx2.cpp  dequant_iq2_s_sse2.cpp  dequant_iq2_xs_avx2.cpp  dequant_iq2_xs_sse2.cpp  dequant_iq2_xxs_avx2.cpp  dequant_iq2_xxs_sse2.cpp  dequant_iq3_s_avx2.cpp  dequant_iq3_s_sse4_1.cpp  dequant_iq3_xxs_avx2.cpp  dequant_iq4_nl_sse4_1.cpp  dequant_mxfp4_sse4_1.cpp  dequant_nvfp4_avx2.cpp  dequant_nvfp4_sse2.cpp  dequant_q3_k_sse2.cpp  dequant_q4_0.cpp  dequant_q4_0_avx2.cpp  dequant_q4_1_sse2.cpp  dequant_q4_k_sse2.cpp  dequant_q4_k_sse4_1.cpp  dequant_q5_0_avx2.cpp  dequant_q5_k_avx2.cpp  dequant_q6_k_sse2.cpp  dequant_q8_0.cpp  dequant_q8_0_avx2.cpp  dequant_q8_0_sse2.cpp  dequant_q8_0_sse4_1.cpp  dequant_tq1_0_sse2.cpp  dequant_tq2_0_avx2.cpp  dequant_tq2_0_sse2.cpp  dequant_tq2_0_sse4_1.cpp  iq1_s.cpp  iq2_s.cpp  iq2_xs.cpp  iq3_s.cpp  iq3_xxs.cpp  iq4_nl.cpp  (+98 more)
cuda_kernels/: formats.py  ggml_ref.py
cuda_kernels/csrc/: common.h  common_hip.h  dequantize_hip.h  kernel.cu  torch_bindings.cpp
docs/: benchmark.md  benchmarks.md  cli.md  correctness.md  cuda.md  development.md  ecosystem.md  index.md  installation.md  packaging.md  performance.md  policy.md  public_api_backend_benchmark.md  public_api_benchmark.md  python-api.md  qtypes.md  roadmap.md  simd.md  support-matrix.md
include/: libgguf.h
reports/: README.md  gguf_qtype_inventory.json  gguf_qtype_inventory.md
reports/gguf_comparison/: comparison_plan.json  comparison_summary.md  dynamic_policy_vs_ud.json  dynamic_policy_vs_ud.md  ernie_dynamic_mismatch.md  policy_analysis.md  policy_override_candidates.json  standard_results.json  ud_ernie_turbo_q5km_our_standard_vs_ud.md  ud_ernie_turbo_q5km_standard_vs_ud.md  ud_policy_analysis.json  ud_policy_findings.md  ud_vs_comfy_policy_analysis.json  ud_vs_comfy_policy_analysis.md  verify_hidream_fast_q3_k_m_after_policy.json
scripts/: __init__.py  bench_common_quant.py  bench_dequant.py  bench_dequant_q4_0_avx2.py  bench_dequant_q8_0_avx2.py  bench_quant.py  build_libgguf.py  check_wheel_install.py  compare_hf_gguf.py  generate_cuda_iq1_neighbours.py  generate_cuda_iq2_neighbours.py  generate_cuda_iq3_neighbours.py  generate_support_matrix.py  native_sources.py  update_golden.py
src/libgguf/: __init__.py  _metadata.py  compare.py  imatrix.py  inspect.py  quantize.py  quantize_gguf.py  quantize_gguf_native.py  quantize_gguf_pt.py  quantize_gguf_torch.py  quantize_pt.py  quantize_torch_pt.py
tests/: conftest.py  ggml_types.py  test_backend_equivalence.py  test_check_exact.py  test_cmake_cuda_sources.py  test_compare.py  test_compare_hf_gguf.py  test_conversion_bench.py  test_cuda_iq_neighbour_generators.py  test_entry_points.py  test_imatrix.py  test_imports.py  test_inspect.py  test_libgguf_reference.py  test_metadata_contracts.py  test_native_executable.py  test_native_safetensors_payload.py  test_python_api_rows.py  test_quantize_gguf.py  test_quantize_policy.py  test_quantize_storage.py  test_quantize_torch_pt.py  test_support_matrix.py
tests/golden/: manifest.json
tools/: bench_dequant.py
(+234 files in other folders)
