[build-system]
requires = ["scikit-build-core>=0.12.0"]
build-backend = "scikit_build_core.build"

[project]
name = "libgguf"
version = "0.1.0"
description = "Standalone GGUF reference quantization bindings"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
cuda = ["torch"]
quantize = ["gguf", "safetensors", "torch", "tqdm"]
test = ["gguf", "huggingface_hub", "pytest", "requests", "safetensors", "torch", "tqdm"]

[project.scripts]
quantize-gguf = "libgguf.quantize_gguf:main"
quantize-gguf-native = "libgguf.quantize_gguf_native:main"
quantize-gguf-pt = "libgguf.quantize_gguf_pt:main"
quantize-gguf-torch = "libgguf.quantize_gguf_torch:main"

[tool.pytest.ini_options]
testpaths = ["tests", "src/libgguf/libgguf_numpy/tests", "src/libgguf/libgguf_torch/tests", "src/libgguf/libgguf_cuda/tests"]

[tool.scikit-build]
minimum-version = "0.12"
cmake.version = ">=3.18"
cmake.build-type = "Release"
wheel.packages = ["src/libgguf"]
