[build-system]
requires = ["scikit-build-core>=0.12.0"]
build-backend = "scikit_build_core.build"

[project]
name = "libgguf"
version = "0.1.0"
description = "Standalone GGUF reference quantization bindings"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
cuda = ["torch"]
quantize = ["gguf", "safetensors", "torch", "tqdm"]
test = ["gguf", "huggingface_hub", "pytest", "requests", "safetensors", "torch", "tqdm"]

[project.scripts]
gguf-inspect = "libgguf.inspect:main"
gguf-validate = "libgguf.inspect:validate_main"

[tool.pytest.ini_options]
testpaths = ["tests", "src/libgguf/libgguf_numpy/tests", "src/libgguf/libgguf_torch/tests", "src/libgguf/libgguf_cuda/tests"]

[tool.scikit-build]
minimum-version = "0.12"
cmake.version = ">=3.18"
cmake.build-type = "Release"
wheel.packages = ["src/libgguf"]
